--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -17,6 +17,7 @@ env:
   CONFIG_FILE: 360t7-hbc.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
+  SSH_ACTIONS: true
   UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
@@ -30,8 +31,9 @@ on:
     inputs:
       ssh:
         description: 'SSH connection to Actions'
-        required: false
-        default: 'false'
+        if: env.SSH_ACTIONS == 'true'
+        # required: false
+        # default: 'false'
 #  schedule:
 #    - cron: 0 8 */5 * *
 
