--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -11,8 +11,8 @@
 name: Build OpenWrt
 
 env:
-  REPO_URL: https://github.com/immortalwrt/immortalwrt/tree/openwrt-23.05
-  REPO_BRANCH: mt7981
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
+  REPO_BRANCH: openwrt-23.05
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: 360t7-hbc.config
   DIY_P1_SH: diy-part1.sh
