--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -14,7 +14,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: padavanonly23052.config
+  CONFIG_FILE: 360t7-hbc.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   SSH_ACTIONS: true
